--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "watch": "nodemon src/index.js --exec babel-node",
     "precommit": "lint-staged",
     "commitmsg": "commitlint -e",
-    "lint": "eslint ."
+    "precommit": "lint-staged",
+    "lint": "eslint .",
+    "release": "standard-version"
   },
   "author": "",
   "license": "ISC",
@@ -45,12 +47,9 @@
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-import": "^2.3.0",
     "husky": "^0.14.3",
-    "jest": "20.0.4",
-    "jest-cli": "20.0.4",
-    "lint-staged": "^4.0.2",
+    "lint-staged": "^4.2.1",
     "nodemon": "^1.12.1",
-    "prettier": "^1.5.3",
-    "rimraf": "^2.6.1"
+    "standard-version": "^4.2.0"
   },
   "jest": {
     "testEnvironment": "node",
