--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.0.0",
     "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2015-node": "^6.1.1",
     "babel-preset-stage-0": "^6.24.1",
     "eslint": "^4.7.1",
     "eslint-config-airbnb": "^15.1.0",
