--- a/package.json
+++ b/package.json
@@ -1,47 +1,62 @@
 {
-  "name": "inside-server",
+  "name": "test-apollo",
   "version": "1.0.0",
-  "description": "Inside GraphQL/Koa/MongoDB Api",
+  "description": "",
   "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ifactory-solutions/inside-server.git"
+  "scripts": {
+    "build": "npm run clear && babel src --ignore *.spec.js --out-dir dist --copy-files",
+    "clear": "rimraf ./dist",
+    "start": "node dist/index.js",
+    "test": "jest --coverage --forceExit --runInBand",
+    "test:watch": "jest --watch --coverage",
+    "watch": "nodemon src/index.js --exec babel-node",
+    "precommit": "lint-staged",
+    "commitmsg": "commitlint -e",
+    "lint": "eslint ."
   },
   "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/ifactory-solutions/inside-server/issues"
+  "license": "ISC",
+  "dependencies": {
+    "apollo-server-koa": "^1.1.2",
+    "babel-polyfill": "^6.23.0",
+    "bcryptjs": "^2.4.3",
+    "dotenv-safe": "^4.0.4",
+    "graphql": "^0.11.4",
+    "graphql-tools": "^1.2.3",
+    "jsonwebtoken": "^8.0.1",
+    "koa": "^2.3.0",
+    "koa-bodyparser": "^3.2.0",
+    "koa-router": "^7.1.1",
+    "kcors": "^2.2.1",
+    "koa-compose": "^4.0.0",
+    "koa-convert": "^1.2.0",
+    "koa-graphql": "^0.6.2",
+    "koa-logger": "^2.0.1",
+    "mongoose": "^4.10.8"
   },
-  "homepage": "https://github.com/ifactory-solutions/inside-server#readme",
-  "scripts": {
-    "start": "nodemon --exec npm run babel-node index.js",
-    "babel-node": "babel-node",
-    "eslint": "eslint .",
-    "commitmsg": "commitlint -e",
-    "precommit": "lint-staged"
+  "devDependencies": {
+    "@commitlint/cli": "^3.1.0",
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^7.2.3",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "eslint": "^4.0.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.3.0",
+    "husky": "^0.14.3",
+    "jest": "20.0.4",
+    "jest-cli": "20.0.4",
+    "lint-staged": "^4.0.2",
+    "nodemon": "^1.12.1",
+    "prettier": "^1.5.3",
+    "rimraf": "^2.6.1"
   },
   "lint-staged": {
     "*.js": [
-      "eslint --max-warnings 0"
+      "prettier --write --single-quote true --trailing-comma all --print-width 120",
+      "git add",
+      "eslint --cache --max-warnings 0"
     ]
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^3.2.0",
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.0.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015-node": "^6.1.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "eslint": "^4.7.1",
-    "eslint-config-airbnb": "^15.1.0",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-import-resolver-babel-module": "^3.0.0",
-    "eslint-plugin-import": "^2.7.0",
-    "husky": "^0.14.3",
-    "lint-staged": "^4.2.1",
-    "nodemon": "^1.12.1"
-  },
-  "dependencies": {
-    "koa": "^2.3.0"
   }
 }
