test(login): Create login tests
Create test to login mutation

--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "*.js": [
       "prettier --write --single-quote true --trailing-comma all --print-width 120",
       "git add",
-      "eslint --cache --max-warnings 0"
+      "eslint --cache --no-ignore --max-warnings 0"
     ]
   }
 }
