--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -7,5 +7,9 @@
    no-continue: 0
    no-underscore-dangle: 0
    generator-star-spacing: 0
+   no-return-await: 0
+   guard-for-in: 0
+   no-restricted-syntax: 0
+   no-loop-func: 0
  env:
    jest: true
