test(travis-docker): Change travis yml
Change travis.yml to run docker before running ci tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,12 @@
+sudo: required
+
+services:
+  - docker
+  - docker-compose
+
+before_install:
+  - docker-compose -f docker.compose.test.yml up
+
 language: node_js
 
 cache:
