--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
   - docker-compose
 
 before_install:
-  - docker-compose -f docker.compose.test.yml up
+  - docker-compose -f docker-compose.test.yml up
 
 language: node_js
 
