--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -11,6 +11,6 @@ services:
             MONGO_URL: mongodb://mongo/test
         volumes:
             - "./src:/app/src"
-        entrypoint: "npm run test:watch"
+        entrypoint: "npm run test"
     mongo:
         image: mongo
