refactor(travis): refactor travis config
Update travis config to work with test env

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -11,6 +11,8 @@ services:
             MONGO_URL: mongodb://mongo/test
         volumes:
             - "./src:/app/src"
-        entrypoint: "npm run test:watch"
+        entrypoint: "npm run test"
     mongo:
         image: mongo
+        ports:
+          - "27017:27017"
