--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,18 @@
+sudo: required
+
+services:
+  - docker
+  - docker-compose
+
+env:
+  global:
+    - MONGODB_URL: mongodb://localhost:27017/test
+
+before_install:
+  - docker-compose -f docker-compose.test.yml up -d mongo
+
+install: npm i --quiet
+
 language: node_js
 
 cache:
