--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 #Enviroment
 NODE_ENV=development
 
-#GraphQL settings
-GRAPHQL_PORT=5000
+#Server settings
+SERVER_PORT=5000
 
 #Security
-JWT_KEY=awesome_secret_key
+JWT_KEY=inside_server
