--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,27 @@
 version: '3'
-services:
-    graph-api:
-        build: .
-        depends_on:
-            - mongo
-        links:
-            - mongo
-        environment:
-            NODE_ENV: development
-            MONGO_URL: mongodb://mongo/database
-        ports:
-            - "5000:5000"
-        volumes:
-            - "./src:/app/src"
-            - "./dist:/app/dist"
-            - "./package.json:/app/package.json"
-        entrypoint: "npm run watch"
 
-    mongo:
-        image: mongo
+services:
+  inside-api:
+    build: .
+    depends_on:
+      - mysql
+    links:
+      - mysql
+    environment:
+      NODE_ENV: development_docker
+    ports:
+      - "5000:5000"
+    volumes:
+      - "./src:/app/src"
+      - "./dist:/app/dist"
+      - "./package.json:/app/package.json"
+    entrypoint: "npm run watch | npm run migrate | npm run seed"
+  mysql:
+    image: mysql:5.7
+    environment:
+      MYSQL_DATABASE: "inside"
+      MYSQL_ROOT_PASSWORD: "123456"
+    volumes:
+    - "./mysql/data/:/var/lib/mysql"
+    ports:
+    - "3306:3306"
