feat(crud_employee): start implement the crud

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "bcryptjs": "^2.4.3",
     "boom": "^7.1.1",
     "dotenv-safe": "^4.0.4",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
     "jsonwebtoken": "^8.0.1",
     "kcors": "^2.2.1",
     "koa": "^2.3.0",
