--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-polyfill": "^6.23.0",
     "bcryptjs": "^2.4.3",
     "boom": "^7.1.1",
+    "crypto": "^1.0.1",
     "dotenv-safe": "^4.0.4",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
